service/crates/webapp/tests/snapshots/service__test_submit_known_username.snap
---
source: crates/webapp/tests/service.rs
expression: output
---
200 OK
Content-Type: text/html; charset=utf-8
Server: Rocket

<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />

    <title>Universe</title>
  </head>
  <body>
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
  <a class="navbar-brand" href="/">Universe</a>
  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation">
    <span class="navbar-toggler-icon"></span>
  </button>

  <div class="collapse navbar-collapse" id="navbarSupportedContent">
    <ul class="navbar-nav ml-auto">
      <li class="nav-item">
        <a class="nav-link" href="/login">Login / Register</a>
      </li>
    </ul>
  </div>
</nav>


    <div class="container-fluid mt-3">
    
<div class="row">
  <div class="col-12 col-md-4 order-sm-1">
    
<h3>Login</h3>
<form action="/login/login" method="POST">
  <div class="form-group" data-test="username">
    <label for="login_username">Username</label>
    <input type="text"
           class="form-control "
           id="login_username"
           name="username"
           value="known"
           readonly />
    
  </div>
  <div class="form-group" data-test="password">
    <label for="login_password">Password</label>
    <input type="password"
           class="form-control "
           id="login_password"
           name="password"
           autofocus
           required />
    
  </div>
  <button type="submit" class="btn btn-primary">Login</button>
</form>

  </div>
  <div class="col-12 col-md-8">
    <h3>The World of Sæmyyr</h3>
    <img src="/public/landing.jpg" width="100%" alt="The World of Sæmyyr"/>
  </div>
</div>

    </div>

    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
  </body>
</html>


